Added blagajna.db submodule and manipulation procedures

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "sources/www"]
 	path = sources/www
 	url = git@github.com:ReasonSharp/male-niti-web.git
+[submodule "sources/blagajnadb"]
+	path = sources/blagajnadb
+	url = git@github.com:ReasonSharp/malablagajna.db.git
