--- a/env.template
+++ b/env.template
@@ -6,3 +6,6 @@ export APP_SERVER_NAME=${APP_SERVER_NAME}
 export ALL_DOMAINS="${ALL_DOMAINS}"
 export ADMIN_EMAIL=${ADMIN_EMAIL}
 export RSA_KEY_SIZ=${RSA_KEY_SIZ}
+
+### DATABASE ###
+export BLAGAJNADB_ROOT_PASS=${BLAGAJNADB_ROOT_PASS}
