Some configuration modifications for certbot and nginx

--- a/config/tlsoffloader/tlsoffloader.conf
+++ b/config/tlsoffloader/tlsoffloader.conf
@@ -20,6 +20,7 @@ http {
  server {
   listen                80;
   server_name           ${WEB_SERVER_NAME};
+  server_tokens         off;
   location /.well-known/acme-challenge/ {
    root                 /var/www/certbot;
   }
