Change config of tlsoffloader to redirect to certbot container

--- a/config/tlsoffloader/tlsoffloader.conf
+++ b/config/tlsoffloader/tlsoffloader.conf
@@ -21,8 +21,10 @@ http {
   listen                80;
   server_name           ${WEB_SERVER_NAME};
   server_tokens         off;
-  location /.well-known/acme-challenge/ {
-   root                 /var/www/certbot;
+  location ~ /.well-known/acme-challenge/(.*) {
+   resolver             127.0.0.11;
+   set $upstream        http://certbot:80;
+   proxy_pass           $upstream/.well-known/acme-challenge/$1;
   }
   location / {
    return               301 https://$host$request_uri;
