--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -23,6 +23,9 @@ services:
     volumes:
       - ./files/certificates/conf:/etc/letsencrypt
       - ./files/certificates/www:/var/www/certbot
+    secrets:
+      - source: certbotcredential
+        target: /cred.json
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
   blagajnadb:
@@ -44,7 +47,6 @@ services:
     cap_add:
       - SYS_NICE
 
-
 networks:
   mb-platform:
 
@@ -53,3 +55,5 @@ secrets:
     file: "./config/tlsoffloader/tlsoffloader-${ENV}.conf"
   rootpass:
     file: "./config/blagajnadb/mysql-root-pass-${ENV}.txt"
+  certbotcredential:
+    file: "./config/certbot/${DNS_CREDENTIALS}.json"
