--- a/env.template
+++ b/env.template
@@ -6,6 +6,7 @@ export APP_SERVER_NAME=${APP_SERVER_NAME}
 export ALL_DOMAINS="${ALL_DOMAINS}"
 export ADMIN_EMAIL=${ADMIN_EMAIL}
 export RSA_KEY_SIZ=${RSA_KEY_SIZ}
+export DNS_CREDENTIALS=${DNS_CREDENTIALS}
 
 ### DATABASE ###
 export BLAGAJNADB_ROOT_PASS=${BLAGAJNADB_ROOT_PASS}
