--- a/env.template
+++ b/env.template
@@ -7,6 +7,13 @@ export ALL_DOMAINS="${ALL_DOMAINS}"
 export ADMIN_EMAIL=${ADMIN_EMAIL}
 export RSA_KEY_SIZ=${RSA_KEY_SIZ}
 export DNS_CREDENTIALS=${DNS_CREDENTIALS}
+export HOSTNAME=${HOSTNAME}
 
 ### DATABASE ###
 export BLAGAJNADB_ROOT_PASS=${BLAGAJNADB_ROOT_PASS}
+
+### EMAIL ###
+export SMTP_SERVER="${SMTP_SERVER}"
+export SMTP_USER="${SMTP_USER}"
+export SMTP_PASS="${SMTP_PASS}"
+export RECEIVER="${RECEIVER}"
