--- a/config/tlsoffloader/tlsoffloader.conf
+++ b/config/tlsoffloader/tlsoffloader.conf
@@ -42,11 +42,23 @@ http {
  server {
   listen                443 ssl;
   server_name           ${WEB_SERVER_NAME};
+  index                 index.php index.html index.htm index.xml;
   ssl_certificate       /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
   ssl_certificate_key   /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
   include               /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_dhparam           /etc/letsencrypt/ssl-dhparams.pem;
   root                  /usr/share/nginx/html;
+  error_log             /var/log/nginx/error.log;
+  access_log            /var/log/nginx/access.log;
+  location ~ \.php$ {
+   try_files $uri =404;
+   fastcgi_split_path_info ^(.+\.php)(/.+)$;
+   fastcgi_pass php:9000;
+   fastcgi_index index.php;
+   include fastcgi_params;
+   fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
+   fastcgi_param PATH_INFO $fastcgi_path_info;
+  }
  }
 
  server {
