breaking changes; prepare version 2

--- a/env.template
+++ b/env.template
@@ -3,6 +3,7 @@
 ### SERVER ###
 export WEB_SERVER_NAME=${WEB_SERVER_NAME}
 export APP_SERVER_NAME=${APP_SERVER_NAME}
+export QTB_SERVER_NAME=${QTB_SERVER_NAME}
 export ALL_DOMAINS="${ALL_DOMAINS}"
 export ADMIN_EMAIL=${ADMIN_EMAIL}
 export RSA_KEY_SIZ=${RSA_KEY_SIZ}
@@ -11,9 +12,12 @@ export HOSTNAME=${HOSTNAME}
 
 ### DATABASE ###
 export BLAGAJNADB_ROOT_PASS=${BLAGAJNADB_ROOT_PASS}
+export USERDB_PASS=${USERDB_PASS}
 
 ### EMAIL ###
 export SMTP_SERVER="${SMTP_SERVER}"
 export SMTP_USER="${SMTP_USER}"
 export SMTP_PASS="${SMTP_PASS}"
-export RECEIVER="${RECEIVER}"
+
+### MN-API ###
+export MNAPI_OUTDIR="${MNAPI_OUTDIR}"
