--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -17,7 +17,7 @@ services:
     volumes:
       - ./files/certificates/conf:/etc/letsencrypt
       - ./files/certificates/www:/var/www/certbot
-      - ./sources/www/html:/usr/share/nginx/html
+      - ./files/www:/usr/share/nginx/html
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
   certbot:
