--- a/docker-compose-infra-v2.yml
+++ b/docker-compose-infra-v2.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - ./files/certificates/conf:/etc/letsencrypt
       - ./files/certificates/www:/var/www/certbot
-      - ./sources/www/html:/usr/share/nginx/html
+      - ./files/www/html:/usr/share/nginx/html
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
   certbot:
@@ -28,40 +28,6 @@ services:
       - source: certbotcredential
         target: /cred.json
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-
-  blagajnadb:
-    image: mariadb:${MARIADB_VERSION}
-    restart: unless-stopped
-    command: ['mysqld', '--defaults-file=/etc/my.cnf', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci', '--innodb-flush-log-at-trx-commit=0', '--max-sp-recursion-depth=1']
-    ports:
-      - "3306:3306"
-    networks:
-      - mb-platform
-    volumes:
-      - ./files/blagajnadb/mariadb/my.cnf:/etc/my.cnf:ro
-      - ./files/blagajnadb/data:/var/lib/mysql:rw
-    environment:
-      MARIADB_ROOT_PASSWORD_FILE: /run/secrets/rootpass
-      LANG: C.UTF-8
-    secrets:
-      - source: rootpass
-    cap_add:
-      - SYS_NICE
-
-  userdb:
-    image: postgres:${POSTGRES_VERSION}
-    restart: unless-stopped
-    environment:
-      POSTGRES_PASSWORD_FILE: /run/secrets/postgrepass
-    networks:
-      - mb-platform
-    volumes:
-      - ./files/userdb/data:/var/lib/postgresql/data:rw
-      - ./sources/userdb/up:/docker-entrypoint-initdb.d
-    secrets:
-      - source: postgrepass
-    ports:
-      - "5432:5432"
 
   mnapi:
     image: mnapi:latest
