fixed platform build

--- a/env.template
+++ b/env.template
@@ -1,12 +1,12 @@
 #!/bin/bash
 
+### ENVIRONMENT (prod, dev) ###
+export ENV=dev
+
 ### SERVER ###
 export WEB_SERVER_NAME=${WEB_SERVER_NAME}
 export ALL_DOMAINS="${ALL_DOMAINS}"
 export ADMIN_EMAIL=${ADMIN_EMAIL}
 export RSA_KEY_SIZ=${RSA_KEY_SIZ}
-export DNS_CREDENTIALS=${DNS_CREDENTIALS}
+export DNS_CRED_FULL_PATH=${DNS_CRED_FULL_PATH}
 export HOSTNAME=${HOSTNAME}
-
-### MN-API ###
-export MNAPI_OUTDIR="${MNAPI_OUTDIR}"
