--- a/containers/nginx/tlsoffloader.conf
+++ b/containers/nginx/tlsoffloader.conf
@@ -34,13 +34,34 @@ http {
  server {
   listen                443 ssl;
   server_name           ${WEB_SERVER_NAME};
-  index                 index.php index.html index.htm index.xml;
   ssl_certificate       /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
   ssl_certificate_key   /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
   include               /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_dhparam           /etc/letsencrypt/ssl-dhparams.pem;
-  root                  /usr/share/nginx/html;
-  error_log             /var/log/nginx/error.log;
-  access_log            /var/log/nginx/access.log;
+
+  location / {
+   proxy_pass           http://www;
+   proxy_set_header     Host $host;
+   proxy_set_header     X-Real-IP $remote_addr;
+   proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
+   proxy_set_header     X-Forwarded-Proto $scheme;
+  }
+ }
+
+ server {
+  listen                443 ssl;
+  server_name           nakeddiaries.${WEB_SERVER_NAME};
+  ssl_certificate       /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
+  ssl_certificate_key   /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
+  include               /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam           /etc/letsencrypt/ssl-dhparams.pem;
+
+  location / {
+   proxy_pass           http://blog;
+   proxy_set_header     Host $host;
+   proxy_set_header     X-Real-IP $remote_addr;
+   proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
+   proxy_set_header     X-Forwarded-Proto $scheme;
+  }
  }
 }
