--- a/env.template
+++ b/env.template
@@ -10,3 +10,6 @@ export ADMIN_EMAIL=${ADMIN_EMAIL}
 export RSA_KEY_SIZ=${RSA_KEY_SIZ}
 export DNS_CRED_FULL_PATH=${DNS_CRED_FULL_PATH}
 export HOSTNAME=${HOSTNAME}
+
+### DATABASE ###
+export DB_PASS=${DB_PASS}
