--- a/containers/nginx/tlsoffloader.conf
+++ b/containers/nginx/tlsoffloader.conf
@@ -1,67 +1,162 @@
-user                    nginx;
-worker_processes        1;
+user                              nginx;
+worker_processes                  1;
 
-error_log               /var/log/nginx/error.log warn;
-pid                     /var/run/nginx.pid;
+error_log                         /var/log/nginx/error.log warn;
+pid                               /var/run/nginx.pid;
 
 events {
- worker_connections     1024;
+ worker_connections               1024;
+}
+
+stream {
+ upstream back {
+  server                          161.97.149.206:443;
+ }
+ upstream nakeddiaries {
+  server                          127.0.0.1:8443;
+ }
+ upstream blog {
+  server                          127.0.0.1:8444;
+ }
+ upstream ln {
+  server                          127.0.0.1:8445;
+ }
+ upstream www {
+  server                          127.0.0.1:8446;
+ }
+ map $ssl_preread_server_name $upstream {
+  relay.${WEB_SERVER_NAME}        back;
+  nakeddiaries.${WEB_SERVER_NAME} nakeddiaries;
+  blog.${WEB_SERVER_NAME}         blog;
+  ln.${WEB_SERVER_NAME}           ln;
+  default                         www;
+ }
+ server {
+  listen                          443;
+  resolver                        1.1.1.1;
+  proxy_connect_timeout           1s;
+  proxy_timeout                   3s;
+  proxy_pass                      $upstream;
+  ssl_preread                     on;
+ }
 }
 http {
- include                /etc/nginx/mime.types;
- default_type           application/octet-stream;
- log_format  main       '$remote_addr - $remote_user [$time_local] "$request" '
-                        '$status $body_bytes_sent "$http_referer" '
-                        '"$http_user_agent" "$http_x_forwarded_for"';
- access_log             /var/log/nginx/access.log  main;
- sendfile               on;
- keepalive_timeout      65;
+ include                          /etc/nginx/mime.types;
+ default_type                     application/octet-stream;
+ log_format  main                 '$remote_addr - $remote_user [$time_local] "$request" '
+                                  '$status $body_bytes_sent "$http_referer" '
+                                  '"$http_user_agent" "$http_x_forwarded_for"';
+ access_log                       /var/log/nginx/access.log  main;
+ sendfile                         on;
+ keepalive_timeout                65;
 
  server {
-  listen                80;
-  server_name           ${WEB_SERVER_NAME};
-  server_tokens         off;
+  listen                          80;
+  server_name                     relay.${WEB_SERVER_NAME};
+  server_tokens                   off;
   location ~ /.well-known/acme-challenge/(.*) {
-   resolver             127.0.0.11;
-   set $upstream        http://certbot:80;
-   proxy_pass           $upstream/.well-known/acme-challenge/$1;
+   set $upstream                  http://161.97.149.206:80;
+   proxy_pass                     $upstream/.well-known/acme-challenge/$1;
   }
   location / {
-   return               301 https://$host$request_uri;
+   return                         301 https://relay.${WEB_SERVER_NAME}$request_uri;
+  }
+ }
+ server {
+  listen                          80;
+  server_name                     ln.${WEB_SERVER_NAME};
+  server_tokens                   off;
+  location ~ /.well-known/acme-challenge/(.*) {
+   resolver                       127.0.0.11;
+   set $upstream                  http://certbot:80;
+   proxy_pass                     $upstream/.well-known/acme-challenge/$1;
+  }
+  location / {
+   return                         301 https://ln.${WEB_SERVER_NAME}$request_uri;
+  }
+ }
+ server {
+  listen                          80;
+  server_name                     ${WEB_SERVER_NAME};
+  server_tokens                   off;
+  location ~ /.well-known/acme-challenge/(.*) {
+   resolver                       127.0.0.11;
+   set $upstream                  http://certbot:80;
+   proxy_pass                     $upstream/.well-known/acme-challenge/$1;
+  }
+  location / {
+   return                         301 https://$host$request_uri;
   }
  }
 
  server {
-  listen                443 ssl;
-  server_name           ${WEB_SERVER_NAME};
-  ssl_certificate       /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
-  ssl_certificate_key   /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
-  include               /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam           /etc/letsencrypt/ssl-dhparams.pem;
+  listen                          8443 ssl;
+  server_name                     nakeddiaries.${WEB_SERVER_NAME};
+  ssl_certificate                 /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
+  ssl_certificate_key             /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
+  include                         /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam                     /etc/letsencrypt/ssl-dhparams.pem;
 
   location / {
-   proxy_pass           http://www;
-   proxy_set_header     Host $host;
-   proxy_set_header     X-Real-IP $remote_addr;
-   proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
-   proxy_set_header     X-Forwarded-Proto $scheme;
+   proxy_pass                     http://nakeddiaries;
+   proxy_set_header               Host $host;
+   proxy_set_header               X-Real-IP $remote_addr;
+   proxy_set_header               X-Forwarded-For $proxy_add_x_forwarded_for;
+   proxy_set_header               X-Forwarded-Proto $scheme;
+  }
+ }
+ server {
+  listen                          8444 ssl;
+  server_name                     blog.${WEB_SERVER_NAME};
+  ssl_certificate                 /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
+  ssl_certificate_key             /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
+  include                         /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam                     /etc/letsencrypt/ssl-dhparams.pem;
+
+  location / {
+   proxy_pass                     http://blog;
+   proxy_set_header               Host $host;
+   proxy_set_header               X-Real-IP $remote_addr;
+   proxy_set_header               X-Forwarded-For $proxy_add_x_forwarded_for;
+   proxy_set_header               X-Forwarded-Proto $scheme;
   }
  }
 
  server {
-  listen                443 ssl;
-  server_name           nakeddiaries.${WEB_SERVER_NAME};
-  ssl_certificate       /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
-  ssl_certificate_key   /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
-  include               /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam           /etc/letsencrypt/ssl-dhparams.pem;
+  listen                          8445 ssl;
+  server_name                     ln.${WEB_SERVER_NAME};
+  ssl_certificate                 /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
+  ssl_certificate_key             /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
 
   location / {
-   proxy_pass           http://blog;
-   proxy_set_header     Host $host;
-   proxy_set_header     X-Real-IP $remote_addr;
-   proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
-   proxy_set_header     X-Forwarded-Proto $scheme;
+   return                         301 https://161.97.149.206:5010$request_uri;
   }
+ }
+
+ server {
+  listen                          8446 ssl;
+  server_name                     ${WEB_SERVER_NAME};
+  ssl_certificate                 /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
+  ssl_certificate_key             /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
+  include                         /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam                     /etc/letsencrypt/ssl-dhparams.pem;
+
+  location / {
+   proxy_pass                     http://www;
+   proxy_set_header               Host $host;
+   proxy_set_header               X-Real-IP $remote_addr;
+   proxy_set_header               X-Forwarded-For $proxy_add_x_forwarded_for;
+   proxy_set_header               X-Forwarded-Proto $scheme;
+  }
+ }
+
+ server {
+  listen                          80 default_server;
+  listen                          8446 ssl default_server;
+  server_name                     _;
+  ssl_certificate                 /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
+  ssl_certificate_key             /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
+
+  return                          301 https://maleniti.com;
  }
 }
