--- a/containers/nginx/tlsoffloader.conf
+++ b/containers/nginx/tlsoffloader.conf
@@ -129,7 +129,7 @@ http {
   ssl_certificate_key             /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
 
   location / {
-   return                         301 https://161.97.149.206:5010$request_uri;
+   return                         301 http://161.97.149.206:5000$request_uri;
   }
  }
 
