--- a/containers/nginx/tlsoffloader.conf
+++ b/containers/nginx/tlsoffloader.conf
@@ -25,6 +25,7 @@ stream {
   server                          127.0.0.1:8446;
  }
  map $ssl_preread_server_name $upstream {
+  *.relay.${WEB_SERVER_NAME}      back;
   relay.${WEB_SERVER_NAME}        back;
   nakeddiaries.${WEB_SERVER_NAME} nakeddiaries;
   blog.${WEB_SERVER_NAME}         blog;
@@ -129,7 +130,11 @@ http {
   ssl_certificate_key             /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
 
   location / {
-   return                         301 http://161.97.149.206:5000$request_uri;
+   proxy_pass                     http://161.97.149.206:5000;
+   proxy_set_header               Host $host;
+   proxy_set_header               X-Real-IP $remote_addr;
+   proxy_set_header               X-Forwarded-For $proxy_add_x_forwarded_for;
+   proxy_set_header               X-Forwarded-Proto $scheme;
   }
  }
 
