--- a/containers/nginx/tlsoffloader.conf
+++ b/containers/nginx/tlsoffloader.conf
@@ -128,6 +128,8 @@ http {
   server_name                     ln.${WEB_SERVER_NAME};
   ssl_certificate                 /etc/letsencrypt/live/${WEB_SERVER_NAME}/fullchain.pem;
   ssl_certificate_key             /etc/letsencrypt/live/${WEB_SERVER_NAME}/privkey.pem;
+  ssl_protocols                   TLSv1.2 TLSv1.3;
+  ssl_ciphers                     HIGH:!aNULL:!MD5;
 
   location / {
    proxy_pass                     http://161.97.149.206:5000;
@@ -135,6 +137,12 @@ http {
    proxy_set_header               X-Real-IP $remote_addr;
    proxy_set_header               X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header               X-Forwarded-Proto $scheme;
+   proxy_set_header               Upgrade $http_upgrade;
+   proxy_set_header               Connection "upgrade";
+   proxy_connect_timeout          60s;
+   proxy_send_timeout             60s;
+   proxy_read_timeout             60s;
+   send_timeout                   60s;
   }
  }
 
