--- a/containers/nginx/tlsoffloader.conf
+++ b/containers/nginx/tlsoffloader.conf
@@ -24,12 +24,17 @@ stream {
  upstream www {
   server                          127.0.0.1:8446;
  }
+ upstream dnh {
+  server                          127.0.0.1:8447;
+ }
  map $ssl_preread_server_name $upstream {
   *.relay.${WEB_SERVER_NAME}      back;
   relay.${WEB_SERVER_NAME}        back;
   nakeddiaries.${WEB_SERVER_NAME} nakeddiaries;
   blog.${WEB_SERVER_NAME}         blog;
   ln.${WEB_SERVER_NAME}           ln;
+  dnh.hr                          dnh;
+  *.dnh.hr                        dnh;
   default                         www;
  }
  server {
@@ -79,6 +84,19 @@ http {
  server {
   listen                          80;
   server_name                     ${WEB_SERVER_NAME};
+  server_tokens                   off;
+  location ~ /.well-known/acme-challenge/(.*) {
+   resolver                       127.0.0.11;
+   set $upstream                  http://certbot:80;
+   proxy_pass                     $upstream/.well-known/acme-challenge/$1;
+  }
+  location / {
+   return                         301 https://$host$request_uri;
+  }
+ }
+ server {
+  listen                          80;
+  server_name                     dnh.hr;
   server_tokens                   off;
   location ~ /.well-known/acme-challenge/(.*) {
    resolver                       127.0.0.11;
@@ -156,6 +174,23 @@ http {
 
   location / {
    proxy_pass                     http://www;
+   proxy_set_header               Host $host;
+   proxy_set_header               X-Real-IP $remote_addr;
+   proxy_set_header               X-Forwarded-For $proxy_add_x_forwarded_for;
+   proxy_set_header               X-Forwarded-Proto $scheme;
+  }
+ }
+
+ server {
+  listen                          8447 ssl;
+  server_name                     dnh.hr;
+  ssl_certificate                 /etc/letsencrypt/live/dnh.hr/fullchain.pem;
+  ssl_certificate_key             /etc/letsencrypt/live/dnh.hr/privkey.pem;
+  include                         /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam                     /etc/letsencrypt/ssl-dhparams.pem;
+
+  location / {
+   proxy_pass                     http://dnh;
    proxy_set_header               Host $host;
    proxy_set_header               X-Real-IP $remote_addr;
    proxy_set_header               X-Forwarded-For $proxy_add_x_forwarded_for;
